finishing up the change

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,7 +16,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
 
 </head>
 
@@ -35,114 +34,124 @@
             </div>
             <p>Qustion 1</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect1">Your mind is always buzzing with unexplored ideas and plans.</label>
-                <select name="q1" class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion1">Your mind is always buzzing with unexplored ideas and plans.</label>
+                <select name="q1" class="form-control" id="formQuestion1">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 2</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect2">Generally speaking, you rely more on your experience than your imagination.</label>
-                <select name="q2" class="form-control" id="exampleFormControlSelect2">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion2">Generally speaking, you rely more on your experience than your imagination.</label>
+                <select name="q2" class="form-control" id="formQuestion2">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 3</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect3">You find it easy to stay relaxed and focused even when there is some pressure.</label>
-                <select name="q3" class="form-control" id="exampleFormControlSelect3">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion3">You find it easy to stay relaxed and focused even when there is some pressure.</label>
+                <select name="q3" class="form-control" id="formQuestion3">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 4</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect4">You rarely do something just out of sheer curiosity.</label>
-                <select name="q4" class="form-control" id="exampleFormControlSelect4">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion4">You rarely do something just out of sheer curiosity.</label>
+                <select name="q4" class="form-control" id="formQuestion4">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 5</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect5">People can rarely upset you.</label>
-                <select name="q5" class="form-control" id="exampleFormControlSelect5">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion5">People can rarely upset you.</label>
+                <select name="q5" class="form-control" id="formQuestion5">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 6</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect6">It is often difficult for you to relate to other people’s feelings.</label>
-                <select name="q6" class="form-control" id="exampleFormControlSelect6">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion6">It is often difficult for you to relate to other people’s feelings.</label>
+                <select name="q6" class="form-control" id="formQuestion6">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 7</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect7">In a discussion, truth should be more important than people’s sensitivities.</label>
-                <select name="q7" class="form-control" id="exampleFormControlSelect7">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion7">In a discussion, truth should be more important than people’s sensitivities.</label>
+                <select name="q7" class="form-control" id="formQuestion7">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 8</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect8">You rarely get carried away by fantasies and ideas.</label>
-                <select name="q8" class="form-control" id="exampleFormControlSelect8">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion8">You rarely get carried away by fantasies and ideas.</label>
+                <select name="q8" class="form-control" id="formQuestion8">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 9</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect9">You think that everyone’s views should be respected regardless of whether they are supported by facts or
+                <label for="formQuestion9">You think that everyone’s views should be respected regardless of whether they are supported by facts or
                     not.
                 </label>
-                <select name="q9" class="form-control" id="exampleFormControlSelect9">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <select name="q9" class="form-control" id="formQuestion9">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <p>Qustion 10</p>
             <div class="form-group">
-                <label for="exampleFormControlSelect10">You feel more energetic after spending time with a group of people.</label>
-                <select name="q10" class="form-control" id="exampleFormControlSelect10">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <label for="formQuestion10">You feel more energetic after spending time with a group of people.</label>
+                <select name="q10" class="form-control" id="formQuestion10">
+                    <option>Choose an answer</option>
+                    <option value="1">1(Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5(Strongly Agree)</option>
                 </select>
             </div>
             <button id="submitSurveyBtn" type="submit" class="btn btn-primary">Submit</button>
@@ -174,38 +183,69 @@
 <script>
     $(document).ready(function () {
 
-        $("#name").on("input", function () {
-            console.log("almost here");
-            var input = $(this);
-            var is_name = input.val();
-            if (is_name) { input.removeClass("invalid").addClass("valid"); }
-            else { input.removeClass("valid").addClass("invalid"); }
-        });
-        $("#imgURL").on("input", function () {
-            console.log("almost here");
-            var input = $(this);
-            var is_name = input.val();
-            if (is_name) { input.removeClass("invalid").addClass("valid"); }
-            else { input.removeClass("valid").addClass("invalid"); }
-        });
-
         $("#surveyForm").on("submit", function (e) {
             e.preventDefault();
-            var formData = JSON.stringify($(this).serializeArray());
-            console.log(formData);
-            $.ajax({
-                url: "/api/friends",
-                type: "POST",
-                data: formData,
-                contentType: "application/json",
-                dataType: "json"
-            }).then(function (res) {
-                console.log(res);
-                $(".modal-body").text(res.closest);
-                $("#exampleModal").modal('show');
-            });
+            if (validateFields()) {
+                var formData = JSON.stringify($(this).serializeArray());
+                console.log(formData);
+                $.ajax({
+                    url: "/api/friends",
+                    type: "POST",
+                    data: formData,
+                    contentType: "application/json",
+                    dataType: "json"
+                }).then(function (res) {
+                    console.log(res);
+                    if (res.closest === "") {
+                        $(".modal-body").text("Welcome to our dating site. You are our first visitor. We will notify you as soon as we find a good match");
+                        $("#exampleModal").modal('show');
+                    } else {
+                        $(".modal-body").text(res.closest);
+                        $("#exampleModal").modal('show');
+                    }
+
+                });
+            } else {
+                alert("Please fix the highlighted fields");
+            }
         });
     });
+
+    function validateFields() {
+        var inputFieldIDs = ["name", "imgURL", "formQuestion1", "formQuestion2", "formQuestion3", "formQuestion4", "formQuestion5", "formQuestion6", "formQuestion7", "formQuestion8", "formQuestion9", "formQuestion10"];
+        var result = true;
+        for (var i = 0; i < inputFieldIDs.length; i++) {
+            if (!validateForm(inputFieldIDs[i])) {
+                if (result)
+                    result = false;
+            }
+        }
+        return result;
+    }
+    function validateForm(inpName) {
+        // $("#name").on("input", function () {
+        //     console.log("almost here");
+        console.log("validating" + inpName);
+        var inputName = $('#' + inpName);
+        var is_name = inputName.val().trim();
+        if (is_name && is_name !== "Choose an answer") {
+            console.log(is_name);
+            inputName.removeClass("invalid").addClass("valid");
+            return true;
+        }
+        else {
+            inputName.removeClass("valid").addClass("invalid");
+            return false;
+        }
+        // });
+        // $("#imgURL").on("input", function () {
+        //     console.log("almost here");
+        //     var input = $(this);
+        //     var is_name = input.val();
+        //     if (is_name) { input.removeClass("invalid").addClass("valid"); }
+        //     else { input.removeClass("valid").addClass("invalid"); }
+        // });
+    }
 </script>
 
 </html>
