--- a/public/survey.html
+++ b/public/survey.html
@@ -170,7 +170,9 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body"></div>
+                <div class="modal-body">
+                    <img src="" id="imagepreview" style="width: 400px; height: 264px;">
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
@@ -201,6 +203,7 @@
                         $("#exampleModal").modal('show');
                     } else {
                         $(".modal-body").text(res.closest);
+                        $("#imagepreview").attr("src", res.photo); // here asign the image to the modal when the user click the enlarge link
                         $("#exampleModal").modal('show');
                     }
 
